--- a/index.html
+++ b/index.html
@@ -395,38 +395,38 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-navigation">
-                <div class="left-footer">
-                    <a class="WebStudio-info-footer bottom-webstudio" href="Web">Web<span id="studio2">Studio</span></a>
+                <div class="footer-left">
+                    <a class="footer-WebStudio-info bottom-webstudio" href="Web">Web<span id="studio2">Studio</span></a>
                     <address>
-                        <ul class="adress-footer-list">
-                            <li class="footer-adress"><a class="adress-link-footer" href="695 Park Ave, NY 10065, USA">695 Park Ave, NY 10065, USA</a></li>
-                            <li class="footer-adress"><a class="contact-link-footer" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                            <li class="footer-adress"><a class="contact-link-footer" href="tel:+1 212-772-4150">+1 212-772-4150</a></li>
+                        <ul class="footer-adress-list">
+                            <li class="footer-adress"><a class="footer-adress-link" href="695 Park Ave, NY 10065, USA">695 Park Ave, NY 10065, USA</a></li>
+                            <li class="footer-adress"><a class="footer-contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                            <li class="footer-adress"><a class="footer-contact-link" href="tel:+1 212-772-4150">+1 212-772-4150</a></li>
                         </ul>
                     </address>
                 </div>
-                <div class="social-media-icons-footer right-footer">
+                <div class="footer-social-media-icons footer-right">
                     <p class="find-us-on">FIND US ON</p>
-                    <ul class="social-media-icons-list-footer">
-                        <li class="icon-list-item-footer">
+                    <ul class="footer-social-media-icons-list">
+                        <li class="footer-icon-list-item">
                             <a href="#">
                             <svg width="20" height="20" fill="white">
                                 <use href="./images/symbol-defs.svg#icon-instagram"></use>
                             </svg>
                         </a></li>
-                        <li class="icon-list-item-footer">
+                        <li class="footer-icon-list-item">
                             <a href="#">
                             <svg width="20" height="20" fill="white">
                                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
                             </svg>
                         </a></li>
-                        <li class="icon-list-item-footer">
+                        <li class="footer-icon-list-item">
                             <a href="#">
                             <svg width="20" height="20" fill="white">
                                 <use href="./images/symbol-defs.svg#icon-facebook"></use>
                             </svg>
                         </a></li>
-                        <li class="icon-list-item-footer">
+                        <li class="footer-icon-list-item">
                             <a href="#">
                             <svg width="20" height="20" fill="white">
                                 <use href="./images/symbol-defs.svg#icon-linkedin2"></use>
@@ -437,9 +437,9 @@
                 <div class="footer-form-position">
                     <h3 class="footer-form-position-title">SUBSCRIBE TO THE NEWSLETTER</h3>
                     <div class="footer-form">
-                        <P class="email-text-footer">E-mail</P>
+                        <P class="footer-email-text">E-mail</P>
                         <form name="" class="footer-form-email">
-                            <label class="form-label-footer">
+                            <label class="footer-form-label">
                                 <input type="email" name="E-mail"/>
                             </label>
                         </form>
