--- a/portofolio.html
+++ b/portofolio.html
@@ -45,20 +45,20 @@
      </header>
     <main>
         <!--OurProjectsSection-->
-        <section class="section section-portofolio">
+        <section class="section portofolio-section">
             <div class="container">
                 <ul class="grid grid-projects">
-                    <li><button class="button" type="button">All</button></li>
-                    <li><button class="button" type="button">Web-sites</button></li>
-                    <li><button class="button" type="button">Apps</button></li>
-                    <li><button class="button" type="button">Design</button></li>
-                    <li><button class="button" type="button">Marketing</button></li>
+                    <li><button class="grid-button" type="button">All</button></li>
+                    <li><button class="grid-button" type="button">Web-sites</button></li>
+                    <li><button class="grid-button" type="button">Apps</button></li>
+                    <li><button class="grid-button" type="button">Design</button></li>
+                    <li><button class="grid-button" type="button">Marketing</button></li>
                 </ul>
                 <ul class="grid grid-portofolio">
                     <li class="grid__card-portofolio">
                         <div class="grid__card-portofolio-upper">
-                            <div class="overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
-                            <img class="image-portofolio" src="./images/img-1.jpg" alt="">
+                            <div class="grid__overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
+                            <img class="grid__image-portofolio" src="./images/img-1.jpg" alt="">
                         </div>
                         <div class="grid__card-portofolio-lower">
                             <h3 class="grid-title" >Technoduck</h3>
@@ -67,8 +67,8 @@
                     </li>
                     <li class="grid__card-portofolio">
                         <div class="grid__card-portofolio-upper">
-                            <div class="overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
-                            <img class="image-portofolio" src="./images/img-2.jpg" alt="">
+                            <div class="grid__overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
+                            <img class="grid__image-portofolio" src="./images/img-2.jpg" alt="">
                         </div>
                         <div class="grid__card-portofolio-lower">
                             <h3 class="grid-title" >Poster New Orlean vs Golden Star</h3>
@@ -77,8 +77,8 @@
                     </li>
                     <li class="grid__card-portofolio">
                         <div class="grid__card-portofolio-upper">
-                            <div class="overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
-                            <img class="image-portofolio" src="./images/img-3.jpg" alt="">
+                            <div class="grid__overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
+                            <img class="grid__image-portofolio" src="./images/img-3.jpg" alt="">
                         </div>
                         <div class="grid__card-portofolio-lower">
                            <h3 class="grid-title" >Seafood Restaurant</h3>
@@ -87,8 +87,8 @@
                     </li>
                     <li class="grid__card-portofolio">
                         <div class="grid__card-portofolio-upper">
-                            <div class="overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
-                            <img class="image-portofolio" src="./images/img-4.jpg" alt="">
+                            <div class="grid__overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
+                            <img class="grid__image-portofolio" src="./images/img-4.jpg" alt="">
                          </div>
                          <div class="grid__card-portofolio-lower">
                             <h3 class="grid-title" >Project Prime</h3>
@@ -97,8 +97,8 @@
                     </li>
                     <li class="grid__card-portofolio">
                         <div class="grid__card-portofolio-upper">
-                            <div class="overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
-                            <img class="image-portofolio" src="./images/img-5.jpg" alt="">
+                            <div class="grid__overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
+                            <img class="grid__image-portofolio" src="./images/img-5.jpg" alt="">
                         </div>
                         <div class="grid__card-portofolio-lower">
                             <h3 class="grid-title" >Project Boxes</h3>
@@ -107,8 +107,8 @@
                     </li>
                     <li class="grid__card-portofolio">
                         <div class="grid__card-portofolio-upper">
-                            <div class="overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
-                            <img class="image-portofolio" src="./images/img-6.jpg" alt="">
+                            <div class="grid__overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
+                            <img class="grid__image-portofolio" src="./images/img-6.jpg" alt="">
                         </div>
                         <div class="grid__card-portofolio-lower">
                             <h3 class="grid-title" >Inspiration has no Borders</h3>
@@ -117,8 +117,8 @@
                     </li>
                     <li class="grid__card-portofolio">
                         <div class="grid__card-portofolio-upper">
-                            <div class="overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
-                            <img class="image-portofolio" src="./images/img-7.jpg" alt="">
+                            <div class="grid__overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
+                            <img class="grid__image-portofolio" src="./images/img-7.jpg" alt="">
                         </div>
                         <div class="grid__card-portofolio-lower">
                             <h3 class="grid-title" >Limited Edition</h3>
@@ -127,8 +127,8 @@
                     </li>
                     <li class="grid__card-portofolio">
                         <div class="grid__card-portofolio-upper">
-                            <div class="overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
-                            <img class="image-portofolio" src="./images/img-8.jpg" alt="">
+                            <div class="grid__overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
+                            <img class="grid__image-portofolio" src="./images/img-8.jpg" alt="">
                         </div>
                         <div class="grid__card-portofolio-lower">
                             <h3 class="grid-title" >Project LAB</h3>
@@ -137,8 +137,8 @@
                     </li>
                     <li class="grid__card-portofolio">
                         <div class="grid__card-portofolio-upper">
-                            <div class="overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
-                            <img class="image-portofolio" src="./images/img-9.jpg" alt="">
+                            <div class="grid__overlay">Technoduck is a state-of-the-art coronavirus distribution platform. Companies use this platform for digital espionage and attacks on competitors' secure servers.</div>
+                            <img class="grid__image-portofolio" src="./images/img-9.jpg" alt="">
                         </div>
                         <div class="grid__card-portofolio-lower">
                             <h3 class="grid-title" >Growing Business</h3>
