--- a/index.html
+++ b/index.html
@@ -164,21 +164,21 @@
                 <h2 class="section__title section-three-title">What we do</h2>
                 <ul class="grid">
                     <li class="grid__items">
-                        <div class="what-we-do">
+                        <div class="section-three-what-we-do">
                             <img src="./images/Tablet and comp 1.jpg" alt="Tablet and comp 1" width="370" height="294">
-                            <p class="what-we-do__title">DESKTOP APPS</p>
+                            <p class="section-three-what-we-do__title">DESKTOP APPS</p>
                         </div>
                     </li>
                     <li class="grid__items">
-                        <div class="what-we-do">
+                        <div class="section-three-what-we-do">
                             <img src="./images/Tablet and comp 2.jpg" alt="Tablet and comp 2" width="370" height="294">
-                            <p class="what-we-do__title">MOBILE APPS</p>
+                            <p class="section-three-what-we-do__title">MOBILE APPS</p>
                         </div>
                     </li>
                     <li class="grid__items">
-                        <div class="what-we-do">
+                        <div class="section-three-what-we-do">
                             <img src="./images/Tablet and comp 3.jpg" alt="Tablet and comp 3" width="370" height="294">
-                            <p class="what-we-do__title">DESIGN SOLUTIONS</p>
+                            <p class="section-three-what-we-do__title">DESIGN SOLUTIONS</p>
                         </div>
                     </li>
                 </ul>
